[workspace]

members = [
    "platform/api",
    "video/edge",
    "video/ingest",
    "video/transcoder",
    "video/lib/*",
    "video/api",
    "video/player",
    "video/player_types",
    "video/common",
    "binary-helper",
    "common",
    "proto",
    "config/config",
    "config/config_derive",
    "config/config_test",
]

resolver = "2"

[profile.release]
lto = 'fat'

[profile.wasm]
lto = 'fat'
panic = 'abort'
opt-level = "z"
codegen-units = 1
strip = true
inherits = "release"

[workspace.dependencies]
aac = { path = "video/lib/aac" }
amf0 = { path = "video/lib/amf0" }
av1 = { path = "video/lib/av1" }
bytesio = { path = "video/lib/bytesio", default-features = false }
exp_golomb = { path = "video/lib/exp_golomb" }
flv = { path = "video/lib/flv" }
h264 = { path = "video/lib/h264" }
h265 = { path = "video/lib/h265" }
mp4 = { path = "video/lib/mp4" }
rtmp = { path = "video/lib/rtmp" }
transmuxer = { path = "video/lib/transmuxer" }
common = { path = "common", default-features = false }
config = { path = "config/config" }
pb = { path = "proto" }
video-common = { path = "video/common" }
video-player-types = { path = "video/player_types" }
video-api = { path = "video/api" }
video-edge = { path = "video/edge" }
video-ingest = { path = "video/ingest" }
video-transcoder = { path = "video/transcoder" }
binary-helper = { path = "binary-helper" }

[patch."https://github.com/tokio-rs/tracing.git"]
tracing = { git = "https://github.com/ScuffleTV/tracing" }
tracing-subscriber = { git = "https://github.com/ScuffleTV/tracing" }
tracing-log = { git = "https://github.com/ScuffleTV/tracing" }

[patch.crates-io]
jwt = { git = "https://github.com/ScuffleTV/rust-jwt", branch = "troy/fixes" }

[patch."https://github.com/async-graphql/async-graphql.git"]
async-graphql = { git = "https://github.com/ScuffleTV/async-graphql.git", branch = "troy/union-generics" }

[patch."https://github.com/aembke/fred.rs.git"]
fred = { git = "https://github.com/ScuffleTV/fred.rs.git", branch = "troy/rustls-bump" }
