[workspace]

members = [
    "platform/api",
    "platform/image_processor",
    "video/edge",
    "video/ingest",
    "video/transcoder",
    "video/lib/*",
    "video/api",
    "video/player",
    "video/player_types",
    "video/common",
    "video/cli",
    "binary-helper",
    "common",
    "proto",
    "config",
    "config/derive",
    "ffmpeg",
]

resolver = "2"

[profile.release-fat]
inherits = "release"
lto = 'fat'

[profile.wasm]
lto = 'fat'
panic = 'abort'
opt-level = "z"
codegen-units = 1
strip = true
inherits = "release"

[workspace.dependencies]
aac = { path = "video/lib/aac" }
amf0 = { path = "video/lib/amf0" }
av1 = { path = "video/lib/av1" }
bytesio = { path = "video/lib/bytesio", default-features = false }
exp_golomb = { path = "video/lib/exp_golomb" }
flv = { path = "video/lib/flv" }
h264 = { path = "video/lib/h264" }
h265 = { path = "video/lib/h265" }
mp4 = { path = "video/lib/mp4" }
rtmp = { path = "video/lib/rtmp" }
transmuxer = { path = "video/lib/transmuxer" }
common = { path = "common", default-features = false }
config = { path = "config" }
pb = { path = "proto" }
video-common = { path = "video/common" }
video-player-types = { path = "video/player_types" }
video-api = { path = "video/api" }
video-edge = { path = "video/edge" }
video-ingest = { path = "video/ingest" }
video-transcoder = { path = "video/transcoder" }
binary-helper = { path = "binary-helper" }
ffmpeg = { path = "ffmpeg" }

[patch."https://github.com/async-graphql/async-graphql.git"]
async-graphql = { git = "https://github.com/ScuffleTV/async-graphql.git", branch = "troy/union-generics" }

[patch."https://github.com/durch/rust-s3.git"]
rust-s3 = { git = "https://github.com/ScuffleTV/rust-s3.git", branch = "troy/rustls" }
