[package]
name = "binary-helper"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.1", features = ["derive"] }
async-nats = "0.33"
ulid = "1.1"
async-trait = "0.1"
tonic = { version = "0.10", features = ["tls"] }
anyhow = "1.0"
tower-layer = "0.3"
async-stream = "0.3"
futures-util = "0.3"
rustls = "0.22"
rustls-pemfile = "2.0"
fred = { version = "8.0.0", features = ["enable-rustls", "sentinel-client", "dns"] }
tokio-postgres-rustls = "0.11"

config = { workspace = true }
common = { workspace = true, features = ["default"] }
pb = { workspace = true }
