[package]
name = "binary-helper"
version = "0.0.1"
edition = "2021"
license = "MIT or Apache-2.0"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.1", features = ["derive"] }
async-nats = "0.33"
ulid = "1.1"
async-trait = "0.1"
tonic = { version = "0.10", features = ["tls"] }
anyhow = "1.0"
tower-layer = "0.3"
async-stream = "0.3"
futures-util = "0.3"
rustls = "0.22"
rustls-pemfile = "2.0"
fred = { version = "8.0.0", features = ["enable-rustls", "sentinel-client", "dns"] }
tokio-postgres-rustls = "0.11"
tracing-subscriber = { features = ["env-filter", "fmt", "json"], version = "0.3" }
once_cell = "1.19"
aws-config = { version = "1.1" }
aws-sdk-s3 = { version = "1.12", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1", features = ["hardcoded-credentials"] }
aws-smithy-types = { version = "1.1", features = ["http-body-1-x"] }
http-body = { version = "1.0.0"}
hyper = "1"
bytes = "1.0"
pin-project = "1"

tokio-postgres = { version = "0.7" }
postgres-types = { version = "0.2", features = ["with-serde_json-1", "with-chrono-0_4", "derive"] }
deadpool-postgres = { version = "0.12" }
postgres-from-row = { version = "0.5" }
prost = { version = "0.12" }

config = { workspace = true }
utils = { workspace = true, features = ["all"] }
pb = { workspace = true }
