[package]
name = "common"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Common Library"

[features]
logging = ["dep:log", "dep:tracing", "dep:tracing-log", "dep:tracing-subscriber", "dep:arc-swap", "dep:once_cell", "dep:thiserror", "dep:serde"]
grpc = ["dep:tonic", "dep:async-trait", "dep:futures", "dep:http", "dep:tower", "dep:trust-dns-resolver", "dep:tracing"]
context = ["dep:tokio", "dep:tokio-util"]
prelude = ["dep:tokio"]
signal = ["tokio/signal", "tokio/process"]
macros = []
database = ["dep:sqlx", "dep:sqlx-postgres", "dep:prost", "dep:uuid", "dep:ulid"]
dataloader = ["dep:fnv", "dep:futures-util", "dep:futures-channel", "dep:futures-timer"]
config = ["dep:config", "dep:serde", "logging"]
ratelimiter = ["dep:fred"]
global = ["context", "dep:fred", "dep:sqlx", "dep:async-nats"]
http = ["dep:hyper", "dep:serde_json", "dep:routerify"]

default = ["logging", "grpc", "context", "prelude", "signal", "macros", "config", "dataloader", "database", "ratelimiter", "global", "http"]

[dependencies]
log = { version = "0.4.20", optional = true }
http = { version = "0.2.10", optional = true }
tower = { version = "0.4.13", optional = true }
config = { workspace = true, optional = true }
futures = { version = "0.3.29", optional = true }
tracing = { version = "0.2.0", optional = true, git = "https://github.com/tokio-rs/tracing.git" }
arc-swap = { version = "1.6.0", optional = true }
tokio-util = { version = "0.7.10", optional = true }
async-trait = { version = "0.1.74", optional = true }
tonic = { version = "0.10.2", features = ["tls"], optional = true }
tokio = { version = "1.34.0", features = ["sync", "rt"], optional = true }
serde = { version = "1.0.192", features = ["derive"], optional = true }
tracing-log = { version = "0.2.0", features = ["env_logger"], optional = true, git = "https://github.com/tokio-rs/tracing.git" }
once_cell = { version = "1.18.0", optional = true }
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"], optional = true }
tracing-subscriber = { version = "0.3.0", features = ["fmt", "env-filter", "json"], optional = true, git = "https://github.com/tokio-rs/tracing.git" }
thiserror = { version = "1.0.50", optional = true }
fred = { version = "7.0.0", optional = true }
async-nats = { version = "0.33.0", optional = true }
hyper = { version = "0.14.27", optional = true }
serde_json = { version = "1.0.108", optional = true }
routerify = { version = "3.0.0", optional = true }

fnv = { version = "1.0.7", optional = true }
futures-util = { version = "0.3.29", optional = true }
futures-channel = { version = "0.3.29", optional = true }
futures-timer = { version = "3.0.2", optional = true }

const_format = { version = "0.2.32" }

sqlx = { version = "0.7.2", features = ["postgres", "json", "chrono", "uuid"], optional = true }
sqlx-postgres = { version = "0.7.2", optional = true }
prost = { version = "0.12.1", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }
ulid = { version = "1.1.0", features = ["uuid"], optional = true}

[dev-dependencies]
ulid = "1.1.0"
prost = "0.12.1"
tempfile = "3.8.1"
portpicker = "0.1.1"
serial_test = "2.0.0"
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.10.2"
