[package]
name = "common"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Common Library"

[features]
logging = ["dep:log", "dep:tracing", "dep:tracing-log", "dep:tracing-subscriber", "dep:arc-swap", "dep:once_cell", "dep:thiserror", "dep:serde"]
grpc = ["dep:tonic", "dep:async-trait", "dep:futures", "dep:http", "dep:tower", "dep:trust-dns-resolver", "dep:tracing"]
context = ["dep:tokio", "dep:tokio-util"]
prelude = ["dep:tokio"]
signal = ["tokio/signal", "tokio/process"]
macros = []
database = ["dep:sqlx", "dep:sqlx-postgres", "dep:prost", "dep:uuid", "dep:ulid"]
dataloader = ["dep:fnv", "dep:futures-util", "dep:futures-channel"]
config = ["dep:config", "dep:serde", "logging", "dep:rust-s3"]
ratelimiter = ["dep:fred"]
global = ["context", "dep:fred", "dep:sqlx", "dep:async-nats"]
http = ["dep:hyper", "dep:serde_json", "dep:bytes", "dep:http-body-util", "dep:pin-project", "dep:path-tree"]
task = ["dep:tokio", "dep:thiserror"]

default = ["logging", "grpc", "context", "prelude", "signal", "macros", "config", "dataloader", "database", "ratelimiter", "global", "http", "task"]

[dependencies]
log = { version = "0.4", optional = true }
http = { version = "1.0", optional = true }
tower = { version = "0.4", optional = true }
config = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
tracing = { version = "0.2", optional = true, git = "https://github.com/tokio-rs/tracing.git" }
arc-swap = { version = "1.6", optional = true }
tokio-util = { version = "0.7", optional = true }
async-trait = { version = "0.1", optional = true }
tonic = { version = "0.10", features = ["tls"], optional = true }
tokio = { version = "1.35", features = ["sync", "rt"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tracing-log = { version = "0.2", features = ["env_logger"], optional = true, git = "https://github.com/tokio-rs/tracing.git" }
once_cell = { version = "1.19", optional = true }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"], optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"], optional = true, git = "https://github.com/tokio-rs/tracing.git" }
thiserror = { version = "1.0", optional = true }
fred = { git = "https://github.com/aembke/fred.rs.git", optional = true }
async-nats = { version = "0.33", optional = true }
hyper = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
bytes = { version = "1.5", optional = true }
http-body-util = { version = "0.1", optional = true }
pin-project = { version = "1.0", optional = true }
path-tree = { version = "0.7", optional = true }

fnv = { version = "1.0", optional = true }
futures-util = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

const_format = { version = "0.2" }

sqlx = { version = "0.7", features = ["postgres", "json", "chrono", "uuid"], optional = true }
sqlx-postgres = { version = "0.7", optional = true }
prost = { version = "0.12", optional = true }
uuid = { version = "1.6", features = ["v4"], optional = true }
ulid = { version = "1.1", features = ["uuid"], optional = true}

rust-s3 = { git = "https://github.com/durch/rust-s3.git", default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"], optional = true }

[dev-dependencies]
ulid = "1.1"
prost = "0.12"
tempfile = "3.8"
portpicker = "0.1"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.10"
