[package]
name = "common"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Common Library"

[features]
logging = ["dep:log", "dep:tracing", "dep:tracing-log", "dep:tracing-subscriber", "dep:arc-swap", "dep:once_cell", "dep:thiserror", "dep:serde"]
grpc = ["dep:tonic", "dep:async-trait", "dep:futures", "dep:http", "dep:tower", "dep:trust-dns-resolver", "dep:tracing"]
context = ["dep:tokio", "dep:tokio-util"]
prelude = ["dep:tokio"]
signal = ["tokio/signal", "tokio/process"]
macros = []
database = ["dep:sqlx", "dep:sqlx-postgres", "dep:prost", "dep:uuid", "dep:ulid"]
dataloader = ["dep:fnv", "dep:futures-util", "dep:futures-channel"]
config = ["dep:config", "dep:serde", "logging"]
ratelimiter = ["dep:fred"]
global = ["context", "dep:fred", "dep:sqlx", "dep:async-nats"]
http = ["dep:hyper", "dep:serde_json", "dep:bytes", "dep:http-body-util", "dep:pin-project", "dep:path-tree"]
task = ["dep:tokio", "dep:thiserror"]
s3 = ["dep:aws-sdk-s3", "dep:aws-credential-types", "dep:aws-config", "dep:aws-smithy-types", "dep:http-body"]

default = ["logging", "grpc", "context", "prelude", "signal", "macros", "config", "dataloader", "database", "ratelimiter", "global", "http", "task", "s3"]

[dependencies]
log = { version = "0.4", optional = true }
http = { version = "1.0", optional = true }
tower = { version = "0.4", optional = true }
config = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
arc-swap = { version = "1.6", optional = true }
tokio-util = { version = "0.7", optional = true }
async-trait = { version = "0.1", optional = true }
tonic = { version = "0.10", features = ["tls"], optional = true }
tokio = { version = "1.35", features = ["sync", "rt"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tracing-log = { version = "0.2", optional = true }
once_cell = { version = "1.19", optional = true }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"], optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"], optional = true }
thiserror = { version = "1.0", optional = true }
fred = { version = "8.0.0", optional = true }
async-nats = { version = "0.33", optional = true }
hyper = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
bytes = { version = "1.5", optional = true }
http-body-util = { version = "0.1", optional = true }
pin-project = { version = "1.0", optional = true }
path-tree = { version = "0.7", optional = true }

fnv = { version = "1.0", optional = true }
futures-util = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

const_format = { version = "0.2" }

sqlx = { version = "0.7", features = ["postgres", "json", "chrono", "uuid"], optional = true }
sqlx-postgres = { version = "0.7", optional = true }
prost = { version = "0.12", optional = true }
uuid = { version = "1.6", features = ["v4"], optional = true }
ulid = { version = "1.1", features = ["uuid"], optional = true}

aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.12", optional = true }
aws-credential-types = { version = "1.1", optional = true, features = ["hardcoded-credentials"] }
aws-smithy-types = { version = "1.1", features = ["http-body-1-x"], optional = true }
http-body = { version = "1.0.0", optional = true }

[dev-dependencies]
ulid = "1.1"
prost = "0.12"
tempfile = "3.8"
portpicker = "0.1"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.10"
