[package]
name = "ffmpeg-next-io"
version = "0.1.0"
edition = "2021"
authors = [
    "Troy Benson <troy@scuffle.tv>",
    "Scuffle <opensource@scuffle.tv>",
]
description = "IO Extensions for ffmpeg-next"
license = "MIT"
repository = "https://github.com/scuffletv/ffmpeg-next-io"
keywords = ["ffmpeg", "io", "channels", "tokio", "async"]

[dependencies]
libc = "0"
ffmpeg-next = "6"
thiserror = "1"

bytes = { version = "1", optional = true }
crossbeam-channel = { version = "0", optional = true }
tokio = { version = "1", optional = true, features = ["sync"] }
futures = { version = "0", optional = true }
async-std = { version = "1", optional = true }

[features]
channel = ["dep:bytes"]
crossbeam-channel = ["dep:crossbeam-channel", "channel"]
tokio = ["dep:tokio", "channel"]

default = ["channel"]
