[package]
name = "scuffle-image-processor"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Image Processor"
license = "MIT OR Apache-2.0"

[dependencies]
tracing = "0.1"
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
aws-config = "1.1"
aws-sdk-s3 = { version = "1.12", features = ["behavior-version-latest"] }
async-trait = "0.1"
anyhow = "1.0"
async-nats = "0.35"
tonic = "0.11"
futures = "0.3"
thiserror = "1.0"
file-format = "0.25"
scopeguard = "1.2"
rgb = "0.8"
imgref = "1.10"
libavif-sys = { version = "0.16" }
libwebp-sys2 = { version = "0.1", features = ["1_2", "demux", "mux", "static"] }
sha2 = "0.10"
gifski = "1.13"
png = "0.17"
num_cpus = "1.16"
bytes = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
fast_image_resize = "4"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
http = "1"
urlencoding = "2"
humantime-serde = "1"

scuffle-foundations = { version = "*", path = "../foundations", features = ["disable-jemalloc-config"] }
scuffle-ffmpeg = { version = "*", path = "../ffmpeg", features = ["tracing"] }

scuffle-image-processor-proto = { version = "*", path = "./proto", features = ["server", "serde"]}

mongodb = { version = "2", features = ["tokio-runtime", "bson-chrono-0_4"] }
bson = { version = "2", features = ["chrono-0_4"] }

aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
fred = "9.0.3"
strfmt = "0.2"
once_cell = "1.8"
