[package]
name = "platform-image-processor"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Image Processor"
license = "MIT OR Apache-2.0"

[dependencies]
tracing = "0.1"
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1", features = ["uuid"] }
postgres-from-row = "0.5"
prost = "0.12"
aws-config = "1.1"
aws-sdk-s3 = { version = "1.12", features = ["behavior-version-latest"] }
async-trait = "0.1"
anyhow = "1.0"
async-nats = "0.34"
tonic = "0.11"
futures = "0.3"
thiserror = "1.0"
file-format = "0.24"
scopeguard = "1.2"
rgb = "0.8"
imgref = "1.10"
libavif-sys = { version = "0.16" }
libwebp-sys2 = { version = "0.1", features = ["1_2", "demux", "mux", "static"] }
sha2 = "0.10"
byteorder = "1.5"
gifski = "1.13"
png = "0.17"
num_cpus = "1.16"
bytes = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
fast_image_resize = "3.0.4"

utils = { workspace = true, features = ["all"] }
config = { workspace = true }
pb = { workspace = true }
binary-helper = { workspace = true }
ffmpeg = { workspace = true, features = ["task-abort", "tracing"] }
