[package]
name = "pb"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Protobuf definitions for scuffle"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
ulid = "1.0.0"
uuid = "1.4.1"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"
walkdir = "2.3.3"
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"
prettyplease = "0.2.12"
