[package]
name = "pb"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Protobuf definitions for scuffle"

[dependencies]
tonic = "0.10"
prost = "0.12"
ulid = "1.1"
uuid = "1.6"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
walkdir = "2.4"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
