[package]
name = "scuffle-utils"
version = "0.0.4"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Scuffle Utility Library"
repository = "https://github.com/ScuffleTV/scuffle"
license = "MIT"
documentation = "https://docs.rs/scuffle-utils"

[lib]
name = "scuffle_utils"
path = "src/lib.rs"

[features]
grpc = ["dep:tonic", "dep:async-trait", "dep:futures", "dep:http", "dep:tower", "dep:trust-dns-resolver", "dep:tracing"]
context = ["dep:tokio", "dep:tokio-util"]
prelude = ["dep:tokio", "dep:futures"]
signal = ["tokio/signal", "tokio/process"]
database = ["dep:tokio-postgres", "dep:postgres-types", "dep:deadpool-postgres", "dep:postgres-from-row", "dep:prost", "ulid/postgres"]
dataloader = ["dep:fnv", "dep:futures-util", "dep:futures-channel"]
ratelimiter = ["dep:fred"]
http = ["dep:http", "dep:thiserror", "dep:futures-util", "dep:tracing", "dep:hyper", "dep:serde_json", "dep:bytes", "dep:http-body-util", "dep:pin-project", "dep:path-tree"]
task = ["dep:tokio", "dep:thiserror"]

all = ["grpc", "context", "prelude", "signal", "dataloader", "database", "ratelimiter", "http", "task"]

default = []

[dependencies]
http = { version = "1.0", optional = true }
tower = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
async-trait = { version = "0.1", optional = true }
tonic = { version = "0.10", features = ["tls"], optional = true }
tokio = { version = "1.35", features = ["sync", "rt"], optional = true }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"], optional = true }
thiserror = { version = "1.0", optional = true }
fred = { version = "8.0.0", optional = true }
hyper = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
bytes = { version = "1.5", optional = true }
http-body-util = { version = "0.1", optional = true }
pin-project = { version = "1.0", optional = true }
path-tree = { version = "0.7", optional = true }

fnv = { version = "1.0", optional = true }
futures-util = { version = "0.3", optional = true, features = ["io"] }
futures-channel = { version = "0.3", optional = true }

const_format = "0.2"

tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true, features = ["with-serde_json-1", "with-chrono-0_4", "derive"] }
deadpool-postgres = { version = "0.12", optional = true }
postgres-from-row = { version = "0.5", optional = true }
prost = { version = "0.12", optional = true }
ulid = { version = "1.1", optional = true }

[dev-dependencies]
ulid = "1.1"
prost = "0.12"
tempfile = "3.8"
portpicker = "0.1"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.10"
